@@ -1,19 +1,0 @@
-{
-  "name": "sogo-web",
-  "private": true,
-  "devDependencies": {
-    "angular": "1.7.x",
-    "angular-animate": "1.7.x",
-    "angular-aria": "1.7.x",
-    "angular-cookies": "1.7.x",
-    "angular-messages": "1.7.x",
-    "angular-sanitize": "1.7.x",
-    "angular-ui-router": "1.0.20",
-    "angular-file-upload": "latest",
-    "angular-material": "1.1.19",
-    "FileSaver": "latest",
-    "lodash": "latest",
-    "ng-sortable": "1.3.7",
-    "breakpoint-sass": ">=2.4.2"
-  }
-}
