@@ -1,21 +1,41 @@
 {
   "name": "sogo-web",
-  "version": "3.0.0",
-  "homepage": "http://sogo.nu",
-  "bugs": "http://sogo.nu/bugs",
+  "homepage": "https://sogo.nu",
+  "bugs": "https://sogo.nu/bugs",
+  "dependencies": {
+    "angular": "1.7.x",
+    "angular-animate": "1.7.x",
+    "angular-aria": "1.7.x",
+    "angular-cookies": "1.7.x",
+    "angular-file-upload": "latest",
+    "angular-material": "1.1.19",
+    "angular-messages": "1.7.x",
+    "angular-sanitize": "1.7.x",
+    "angular-ui-router": "1.0.20",
+    "file-saver": "latest",
+    "lodash": "latest",
+    "ng-sortable": "1.3.7"
+  },
   "devDependencies": {
     "autoprefixer": ">=6.0.3",
-    "bower": ">=1.3.8",
+    "breakpoint-sass": ">=2.4.2",
     "csswring": ">=3.0.0",
     "grunt": ">=0.4.1",
+    "grunt-contrib-cssmin": ">=1.0.0",
     "grunt-contrib-jshint": ">=0.11.2",
     "grunt-contrib-uglify": ">=0.9",
     "grunt-contrib-watch": ">=0.5.3",
-    "grunt-contrib-cssmin": ">=1.0.0",
     "grunt-ng-annotate": ">=0.10.0",
     "grunt-postcss": ">=0.6.0",
     "grunt-sass": "^2.0.0",
-    "time-grunt": "latest",
-    "kss": ">=2.1.0"
-  }
+    "kss": ">=2.1.0",
+    "time-grunt": "latest"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not ie <= 10",
+    "not ie_mob <= 10",
+    "last 4 Android versions",
+    "Safari >= 8"
+  ]
 }
